; ModuleID = '/home/carl/AnghaBench/git/extr_branch.c_check_tracking_branch.c'
source_filename = "/home/carl/AnghaBench/git/extr_branch.c_check_tracking_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.remote = type { i32 }
%struct.refspec_item = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.remote*, i8*)* @check_tracking_branch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_tracking_branch(%struct.remote* %0, i8* %1) #0 {
  %3 = alloca %struct.remote*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.refspec_item, align 8
  store %struct.remote* %0, %struct.remote** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  store i8* %7, i8** %5, align 8
  %8 = call i32 @memset(%struct.refspec_item* %6, i32 0, i32 8)
  %9 = load i8*, i8** %5, align 8
  %10 = getelementptr inbounds %struct.refspec_item, %struct.refspec_item* %6, i32 0, i32 0
  store i8* %9, i8** %10, align 8
  %11 = load %struct.remote*, %struct.remote** %3, align 8
  %12 = call i32 @remote_find_tracking(%struct.remote* %11, %struct.refspec_item* %6)
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i32 @memset(%struct.refspec_item*, i32, i32) #1

declare dso_local i32 @remote_find_tracking(%struct.remote*, %struct.refspec_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
